# qa_guru_hw18

./: pyproject.toml
