[tool.poetry]
name = "qa-guru-hw18"
version = "0.1.0"
description = "descriptoin sample"
authors = ["Alexey Telnov <signacher@mail.ru>"]
readme = "README.md"
packages = [{include = "qa_guru_hw18"}]

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc2"
pytest = "7.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
